--- a/arimax_analysis.ipynb
+++ b/arimax_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "826fa301",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "6aea1a9d",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4                       7  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "31d380ac",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "max        1.000000                9.000000  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "00faeb22",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "(73439, 9)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "f2ba5a45",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "b62c94c9",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "ed852ad0",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "6d90be26",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "Name: count, Length: 103, dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "8ee74ee1",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "dba9b027",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "id": "8e77d4da",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "793cb158",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "4                       7  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "id": "9b48f80c",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "2017-01-09                     7.0  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "id": "3d65ffb2",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "(738, 8)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "4f67b140",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "id": "f2b08cb6",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,6 +925,38 @@
    "metadata": {},
    "source": [
     "#### Stationarity Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f290a856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to test stationarity\n",
+    "\n",
+    "def test_stationarity(timeseries):\n",
+    "\n",
+    "    # determining rolling statistics\n",
+    "    rolmean = timeseries.rolling(12).mean()\n",
+    "    rolstd = timeseries.rolling(12).std()\n",
+    "\n",
+    "    # plotting rolling statistics\n",
+    "    plt.figure(figsize=(20,5))\n",
+    "    plt.plot(timeseries , label = 'Original', color = 'blue')\n",
+    "    plt.plot(rolmean, label = 'Rolling Mean', color = 'red')\n",
+    "    plt.plot(rolstd, label = 'Rolling Std', color = 'green')\n",
+    "    plt.xlabel('Date')\n",
+    "    plt.ylabel('Rolling Statistics')\n",
+    "    plt.title('Rolling Statistics',size = 15)\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "    # dickey fuller test\n",
+    "    adf_test = adfuller(timeseries)\n",
+    "\n"
    ]
   }
  ],
