--- a/arimax_analysis.ipynb
+++ b/arimax_analysis.ipynb
@@ -1197,12 +1197,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c20ecbc9",
+   "metadata": {},
+   "source": [
+    "#### Run Auto Arima with exogeneous variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "011961dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df3 = df2['holiday','unpredictability_score'] #defining exogenous variables\n",
+    "\n",
+    "model = auto_arima(df2['Close'], \n",
+    "                   test= 'adf',\n",
+    "                   )"
+   ]
   }
  ],
  "metadata": {
